# SEAStAR

./: .gitignore  .travis.yml  CMakeLists.txt  Changelog.txt  README  README.html  README.md  SEAStAR_User_Guide.html  SEAStAR_User_Guide.md  style.css
CMake_modules/: FindOpenMP.cmake
argtable2-13/: CMakeLists.txt
argtable2-13/src/: CMakeLists.txt
documentation/: .gitignore  RDP_vignette.html  RDP_vignette.md  SEAStAR_Pipeline_Stages.gv  SEAStAR_User_Guide.html  SEAStAR_User_Guide.md  SEAStAR_User_Guide.tex  compile_docs.sh
openmp_test/: test.c
scripts/: CMakeLists.txt  RDP_align.sh  RDP_go.sh  RDP_index.sh  RDP_prep.sh  RDP_train_to_heirarchy.js  RDP_train_to_tree.coffee  RDP_train_to_tree.js  RDP_train_to_tree.sh  RDP_tree.js  RDP_tree_dev.coffee  RDP_tree_dev.js  RDP_tree_dev.sh  RDP_tree_merge.js  RDP_tree_merge_dev.coffee  RDP_tree_merge_dev.js  RDP_tree_merge_dev.sh  RDP_tree_nexus.js  RDP_tree_nexus_dev.coffee  RDP_tree_nexus_dev.js  catalog.awk  csfasta2fasta.awk  csfasta2ntfasta.awk  fastq2csfasta.awk  fastq_artillumina2seastar.awk  fastq_artsolid2seastar.awk  fastq_merge_csfasta.awk  fastq_old2new.awk  fastq_sub.coffee  fastq_sub.js  fix_fasta_line_lengths.awk  graph_ops.coffee  graph_ops.js  graph_ops.sh  make_test_data.sh  merge_contigs.awk  nodewrap.sh  saet_eval.sh  select_seqs_from_fasta.awk  seq_scaffold.coffee  (+2 more)
scripts/RDP_viz/: GG2_GG3_tree_bar_test.html  GG2_pie_test.html  GG3_pie_test.html  go.sh  sunburst.coffee  sunburst.html  tree_bars.html  tree_bars.js  tree_pie.js
scripts/RDP_viz/test_data/: GG2.d40_filtered_class.out  GG3.d50_filtered_class.out  trainset6_db_taxid.txt
scripts/asm_viz/: MG2_anneal.coffee  MG2_build.coffee  MG2_build_mst.coffee  MG2_build_newmst.coffee  force_test.coffee  lambda_force.coffee  lambda_force.html  prob_contigs.html  prob_contigs.js  trippy.coffee  trippy2.coffee
src_fastq_nodup/: CMakeLists.txt  fastq_nodup.c
src_ref_select/: CMakeLists.txt  ref_select.c
src_samplefastq/: CMakeLists.txt  samplefastq.c
src_seastar_shared/: CMakeLists.txt  seastar_shared.c  seastar_shared.h
src_solid2fastq/: CMakeLists.txt  solid2fastq.c
src_tetracalc/: CMakeLists.txt  tetracalc.c  tune_tabs.h
src_trimfastq/: CMakeLists.txt  trimfastq.c
test_data/: NC_007205.1.fna  NC_008044.1.fna  NC_008209.1.fna
uthash_includes/: utlist.h  utstring.h
vignettes/RDP/: RDP_vignette.html
vignettes/RDP/example_data_source/: .gitignore  S000000075.fasta  S000004750.fasta  S000005187.fasta  S000011652.fasta  S000020432.fasta  S000134123.fasta  S000357634.fasta  S000367885.fasta  S000379106.fasta  S000390161.fasta  S000431293.fasta  S000443854.fasta  S000458920.fasta  S000498962.fasta  S000901535.fasta  SAR86_custom_db_taxid.txt  SAR86_custom_sequence.fasta  create_vignette_data.sh
vignettes/RDP/sim/: RDP_slim.fasta
zlib-1.2.5/: CMakeLists.txt
zlib-1.2.7/: CMakeLists.txt
zlib-1.2.8/: CMakeLists.txt
